Fixed datenschitz impressums width on mobile

--- a/src/Pages/Desktop/TopBar/TopBar.css
+++ b/src/Pages/Desktop/TopBar/TopBar.css
@@ -82,4 +82,8 @@ li{
     .topBar{
         position: initial;
     }
+
+        .impressum{
+            width: 80%;
+        }
 }
